@@ -19,6 +19,8 @@
 #include "ompi_config.h"
 
 #include "ompi/mpi/f77/bindings.h"
+#include "ompi/mpi/f77/strings.h"
+#include "ompi/file/file.h"
 
 #if OMPI_HAVE_WEAK_SYMBOLS && OMPI_PROFILE_LAYER
 #pragma weak PMPI_FILE_SET_VIEW = mpi_file_set_view_f
@@ -31,8 +33,8 @@ OMPI_GENERATE_F77_BINDINGS (PMPI_FILE_SET_VIEW,
                            pmpi_file_set_view_,
                            pmpi_file_set_view__,
                            pmpi_file_set_view_f,
-                           (MPI_Fint *fh, MPI_Offset *disp, MPI_Fint *etype, MPI_Fint *filetype, char *datarep, MPI_Fint *info, MPI_Fint *ierr),
-                           (fh, disp, etype, filetype, datarep, info, ierr) )
+                           (MPI_Fint *fh, MPI_Offset *disp, MPI_Fint *etype, MPI_Fint *filetype, char *datarep, MPI_Fint *info, MPI_Fint *ierr, int datarep_len),
+                           (fh, disp, etype, filetype, datarep, info, ierr, datarep_len) )
 #endif
 
 #if OMPI_HAVE_WEAK_SYMBOLS
@@ -48,8 +50,8 @@ OMPI_GENERATE_F77_BINDINGS (MPI_FILE_SET_VIEW,
                            mpi_file_set_view_,
                            mpi_file_set_view__,
                            mpi_file_set_view_f,
-                           (MPI_Fint *fh, MPI_Offset *disp, MPI_Fint *etype, MPI_Fint *filetype, char *datarep, MPI_Fint *info, MPI_Fint *ierr),
-                           (fh, disp, etype, filetype, datarep, info, ierr) )
+                           (MPI_Fint *fh, MPI_Offset *disp, MPI_Fint *etype, MPI_Fint *filetype, char *datarep, MPI_Fint *info, MPI_Fint *ierr, int datarep_len),
+                           (fh, disp, etype, filetype, datarep, info, ierr, datarep_len) )
 #endif
 
 
@@ -59,14 +61,27 @@ OMPI_GENERATE_F77_BINDINGS (MPI_FILE_SET_VIEW,
 
 void mpi_file_set_view_f(MPI_Fint *fh, MPI_Offset *disp,
 			 MPI_Fint *etype, MPI_Fint *filetype,
-			 char *datarep, MPI_Fint *info, MPI_Fint *ierr)
+			 char *datarep, MPI_Fint *info, MPI_Fint *ierr, 
+                         int datarep_len)
 {
    MPI_File c_fh = MPI_File_f2c(*fh);
    MPI_Datatype c_etype = MPI_Type_f2c(*etype);
    MPI_Datatype c_filetype = MPI_Type_f2c(*filetype);
    MPI_Info c_info = MPI_Info_f2c(*info);
+   char *c_datarep;
+   int c_err, ret;
+
+    /* Convert the fortran string */
+    if (OMPI_SUCCESS != (ret = ompi_fortran_string_f2c(datarep, datarep_len,
+                                                       &c_datarep))) {
+        c_err = OMPI_ERRHANDLER_INVOKE(c_fh, ret, "MPI_FILE_SET_VIEW");
+        *ierr = OMPI_INT_2_FINT(c_err);
+        return;
+    }
 
    *ierr = OMPI_INT_2_FINT(MPI_File_set_view(c_fh, (MPI_Offset) *disp,
                                              c_etype, c_filetype,
-                                             datarep, c_info));
+                                             c_datarep, c_info));
+
+    free(c_datarep);
 }
